# rfManta

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile  LICENSE  TODO  commandlines
Engine/: CMakeLists.txt
Engine/Control/: CMakeLists.txt  RTRT.cc  RTRT.h
Engine/Display/: CMakeLists.txt  FileDisplay.cc  FileDisplay.h  GLXImageDisplay.cc  GLXImageDisplay.h  MultiDisplay.cc  MultiDisplay.h  NullDisplay.cc  NullDisplay.h  OpenGLDisplay.cc  OpenGLDisplay.h  PureOpenGLDisplay.cc  PureOpenGLDisplay.h  SyncDisplay.cc  SyncDisplay.h
Engine/Factory/: CMakeLists.txt  Create.cc  Create.h  Factory.cc  Factory.h  RegisterKnownComponents.cc  RegisterKnownComponents.h
Engine/IdleModes/: CMakeLists.txt  ZoomIdleMode.cc  ZoomIdleMode.h
Engine/ImageTraversers/: CMakeLists.txt  DeadlineImageTraverser.cc  DeadlineImageTraverser.h  DissolveImageTraverser.cc  DissolveImageTraverser.h  DissolveTiledImageTraverser.cc  DissolveTiledImageTraverser.h  FilteredImageTraverser.cc  FilteredImageTraverser.h  MPI_ImageTraverser.cc  MPI_ImageTraverser.h  NullImageTraverser.cc  NullImageTraverser.h  TiledImageTraverser.cc  TiledImageTraverser.h
Engine/LoadBalancers/: CMakeLists.txt  CyclicLoadBalancer.cc  CyclicLoadBalancer.h  MPI_LoadBalancer.cc  MPI_LoadBalancer.h  SimpleLoadBalancer.cc  SimpleLoadBalancer.h  WQLoadBalancer.cc  WQLoadBalancer.h
Engine/PixelSamplers/: CMakeLists.txt  ClusterSampler.cc  ClusterSampler.h  FastSampler.cc  FastSampler.h  JitterSampler.cc  JitterSampler.h  NullSampler.cc  NullSampler.h  RegularSampler.cc  RegularSampler.h  SingleSampler.cc  SingleSampler.h  TimeViewSampler.cc  TimeViewSampler.h
Engine/Renderers/: CMakeLists.txt  KajiyaPathtracer.cc  KajiyaPathtracer.h  Moire.cc  Moire.h  NPREdges.cc  NPREdges.h  Noise.cc  Noise.h  NullRenderer.cc  NullRenderer.h  RayGen.cc  RayGen.h  Raydumper.cc  Raydumper.h  Raytracer.cc  Raytracer.h
Engine/SampleGenerators/: CMakeLists.txt  ConstantSampleGenerator.cc  ConstantSampleGenerator.h  Stratified2D.cc  Stratified2D.h  UniformRandomGenerator.cc  UniformRandomGenerator.h
Engine/Shadows/: CMakeLists.txt  HardShadows.cc  HardShadows.h  NoDirect.cc  NoDirect.h  NoShadows.cc  NoShadows.h
Interface/: AccelerationStructure.h  AmbientLight.cc  AmbientLight.h  Background.cc  Background.h  CMakeLists.txt  Camera.cc  Camera.h  CameraPath.cc  CameraPath.h  Clonable.cc  Clonable.h  Colormap.h  Context.cc  Context.h  Fragment.cc  Fragment.h  FrameState.h  IdleMode.cc  IdleMode.h  Image.cc  Image.h  ImageDisplay.cc  ImageDisplay.h  ImageTraverser.cc  ImageTraverser.h  InterfaceRTTI.cc  InterfaceRTTI.h  Interpolable.cc  Interpolable.h  Light.cc  Light.h  LightSet.cc  LightSet.h  LoadBalancer.cc  LoadBalancer.h  MantaInterface.cc  MantaInterface.h  Material.cc  Material.h  (+37 more)
Model/: CMakeLists.txt
Model/AmbientLights/: AmbientOcclusion.cc  AmbientOcclusion.h  AmbientOcclusionBackground.cc  AmbientOcclusionBackground.h  ArcAmbient.cc  ArcAmbient.h  CMakeLists.txt  ConstantAmbient.cc  ConstantAmbient.h  EyeAmbient.cc  EyeAmbient.h
Model/Backgrounds/: CMakeLists.txt  ConstantBackground.cc  ConstantBackground.h  EnvMapBackground.cc  EnvMapBackground.h  LinearBackground.cc  LinearBackground.h  TextureBackground.cc  TextureBackground.h
Model/Cameras/: CMakeLists.txt  EnvironmentCamera.cc  EnvironmentCamera.h  FisheyeCamera.cc  FisheyeCamera.h  OrthogonalCamera.cc  OrthogonalCamera.h  PinholeCamera.cc  PinholeCamera.h  SphereCamera.cc  SphereCamera.h  ThinLensCamera.cc  ThinLensCamera.h
Model/Groups/: CMakeLists.txt  CellSkipper.cc  CellSkipper.h  Clip.cc  DynBVH.cc  DynBVH.h  Embree.cc  Embree.h  Group.cc  Group.h  KDTree.cc  KDTree.h  Mesh.cc  Mesh.h  MovingMesh.cc  MovingMesh.h  ObjGroup.cc  ObjGroup.h  RFGraph.cc  RFGraph.h  RayTriangleMailbox.h  RecursiveGrid.cc  RecursiveGrid.h  TimeSteppedParticles.cc  TimeSteppedParticles.h  TreeTraversalProbability.cc  TreeTraversalProbability.h
Model/Instances/: CMakeLists.txt  Instance.cc  Instance.h  InstanceMaterial.cc  InstanceMaterial.h  InstanceRST.cc  InstanceRST.h  InstanceRT.cc  InstanceRT.h  InstanceST.cc  InstanceST.h  InstanceT.cc  InstanceT.h  MPT.h
Model/Intersections/: AxisAlignedBox.cc  AxisAlignedBox.h  CMakeLists.txt  IsosurfaceImplicit.cc  IsosurfaceImplicit.h  Plane.h  Sphere.h  TriangleBBoxOverlap.cc  TriangleBBoxOverlap.h  TriangleEdge.h
Model/Lights/: AreaLight.cc  AreaLight.h  CMakeLists.txt  DirectionalLight.cc  DirectionalLight.h  HeadLight.cc  HeadLight.h  PointLight.cc  PointLight.h
Model/Materials/: CMakeLists.txt  Checker.cc  Checker.h  CopyTextureMaterial.cc  CopyTextureMaterial.h  Dielectric.cc  Dielectric.h  EmitMaterial.cc  EmitMaterial.h  Flat.cc  Flat.h  Lambertian.cc  Lambertian.h  LitMaterial.cc  LitMaterial.h  (+19 more)
StandAlone/: CMakeLists.txt  displaytest.cc  frust-test.cc  manta.cc  manta_path_plot.pl  manta_scaling_plot.pl  manta_tile_size.pl  octvol_build.cc  savescene.cc
SwigInterface/: BackgroundFrame.py  CMakeLists.txt  CSpin.py  CameraFrame.py  FloatSpin.py  KDTreeDynFrame.py  LightFrame.py  MantaCameraPath.py  MantaCapture.py  MiscFrames.py  ThreadsFrame.py  example.cc  example.i  kdtreedyn.py  manta.cc  manta.h  manta.i  mantainterface.i  objviewer.py  pycallback.cc  pycallback.h  pycallback.i  python.cc  runmanta.py  runwxmanta.py  wxManta.cc  wxManta.h  wxManta.py  wxManta_helper.i
UserInterface/: AutomatorUI.cc  AutomatorUI.h  CMakeLists.txt  CameraPathAutomator.cc  CameraPathAutomator.h  NullUI.h  PromptUI.cc  PromptUI.h  SyncFrameAutomator.cc  SyncFrameAutomator.h  XWindowUI.cc  XWindowUI.h
scenes/: 0.cc  CMakeLists.txt  area_light.cc  beach.cc  complexitytest.cc  cornell_box.rtml  cubeWorld.cc  dynlt.cc  externalObject.cc  fence.cc  gridisovol.cc  hdritest.cc  macbeth.cc  octisovol.cc  primtest.cc  softshadow.cc  teapotRoom.cc  triangleSceneViewer.cc  tylenol.cc  valuecolormaptest.cc  volumeTest.cc  vorpal.cc
tests/: CMakeLists.txt  GenerateTest.cmake  NoSSEDoubleTest.cmake  NoSSEFloatTest.cmake  SSETest.cmake  SmokeTest.arachne.sh  SmokeTest.cmake  SmokeTest.code.rayscale.sh  SmokeTest.taz.sh  atomic_counter.cc  common.sh
(+452 files in other folders)
